--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>CSL BE Tech Radar</title>
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="http://zalando.github.io/tech-radar/release/radar-0.8.js"></script>
+  <script src="https://zalando.github.io/tech-radar/release/radar-0.8.js"></script>
 </head>
 
 <body>
